2009-02-02  Michal Ludvig  <michal@logix.cz>

	Merged s3cmd 0.9.9-rc3 from trunk:

	2009-02-01  Michal Ludvig  <michal@logix.cz>
	* S3/Exceptions.py: Correct S3Exception.__str__() to
	  avoid crash in S3Error() subclass. Reported by '~t2~'.
	* NEWS: Updated.

	2009-01-30  Michal Ludvig  <michal@logix.cz>
	* s3cmd: Under some circumstance s3cmd crashed
	  when put/get/sync had 0 files to transmit. Fixed now.

2009-01-30  Michal Ludvig  <michal@logix.cz>

	(branches/s3cmd-speedup branch)
	* S3/ConnMan.py: New Connection Manager
	* s3cmd: Use ConnMan instead of S3.get_connection()
	  (doesn't yet support proxies!)

2009-01-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Output 'delete:' in --dry-run only when
	  used together with --delete-removed. Otherwise
	  the user will think that without --dry-run it
	  would really delete the files.

2009-01-27  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-rc1
	  --------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-rc1

2009-01-26  Michal Ludvig  <michal@logix.cz>

	* Merged CloudFront support from branches/s3cmd-airlock
	  See the ChangeLog in that branch for details.

2009-01-25  W. Tell  <w_tell -at- sourceforge>

	* s3cmd: Implemented --include and friends.

2009-01-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Enabled --dry-run and --exclude for 'put' and 'get'.
	* S3/Exceptions.py: Remove DeprecationWarning about 
	  BaseException.message in Python 2.6
	* s3cmd: Rewritten gpg_command() to use subprocess.Popen()
	  instead of os.popen4() deprecated in 2.6
	* TODO: Note about failing GPG.

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* S3/Config.py: guess_mime_type = True (will affect new 
	  installations only).

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre5
	  ---------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-pre5

2009-01-22  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Updated paths for the new sync
	  semantics.